crates/ars-components/src/data_display/marquee/snapshots/ars_components__data_display__marquee__tests__marquee_edge_end.snap
---
source: crates/ars-components/src/data_display/marquee/mod.rs
expression: "snapshot_attrs(&api.edge_attrs(&EdgeSide::End))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "edge",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "marquee",
            ),
        ),
        (
            Data(
                "ars-side",
            ),
            String(
                "end",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [],
}
