crates/ars-components/src/data_display/marquee/snapshots/ars_components__data_display__marquee__tests__marquee_root_paused.snap
---
source: crates/ars-components/src/data_display/marquee/mod.rs
expression: snapshot_attrs(&api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "marquee",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "paused",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Scrolling content",
            ),
        ),
        (
            Aria(
                Live,
            ),
            String(
                "polite",
            ),
        ),
        (
            Id,
            String(
                "ticker",
            ),
        ),
        (
            Role,
            String(
                "marquee",
            ),
        ),
    ],
    styles: [],
}
